--- a/index.html
+++ b/index.html
@@ -69,10 +69,17 @@
   <div class="tab__content">
       <h3>Projects</h3>
       <div class="project">
+        <h4>CloudCode</h4>
+        <p>Collaborative coding in real time, built with Socket.io and Node.</p>
+        <p class="small-text">Socket.io&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Node.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ace code editor&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Google Diff Match and Patch</p>
+        <p><a href="http://cloud-code.xyz" target="_blank">Live</a>&nbsp;&nbsp;<a href="https://github.com/rclarey/cloudcode" target="_blank">Source</a></p>
+      </div>
+      <hr>
+      <div class="project">
         <h4>Playur (WIP)</h4>
         <p>A music streaming web app built with React and Node. It is currently in development</p>
         <p class="small-text">React&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Node.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MongoDB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Material-UI</p>
-        <p><a href="http://playur.xyz" target="_blank">Live</a>&nbsp;&nbsp;<a href="#" target="_blank">Source</a></p>
+        <p><a href="https://github.com/rclarey/playur" target="_blank">Source</a></p>
       </div>
       <hr>
       <div class="project">
@@ -85,14 +92,16 @@
 
   <div class="tab__content">
     <h3>Resume</h3>
-    <a target="_blank" href="./Russell-Clarey-Resume.pdf"><img id="resume" src="./resume-1b.png"></a>
+    <a target="_blank" href="./Russell-Clarey-Resume.pdf"><img id="resume" src="./resume-2a.png"><p>Resume PDF</p></a>
   </div>
 
   <div class="tab__content">
       <h3>Links</h3>
-      <p><a href="https://github.com/rclarey">GitHub</a></p>
-      <p><a href="https://ca.linkedin.com/in/russellclarey">LinkedIn</a></p>
-      <p><a href="mailto:r.e.clarey@gmail.com">Email</a></p>
+      <ul>
+        <li><a href="https://github.com/rclarey"><img src="./Github-Mark-120px-plus.png"></a></li>
+        <li><a href="https://ca.linkedin.com/in/russellclarey"><img src="./In-2C-128px-R.png"></a></li>
+        <li><a href="mailto:r.e.clarey@gmail.com"><img src="./mail.png"></a></li>
+      </ul>
   </div>
 </div>
   
