--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="tab__content">
       <h3>Links</h3>
       <ul>
-        <li><a href="https://github.com/rclarey"><img src="./Github-Mark-120px-plus.png"></a></li>
+        <li><a href="https://github.com/rclarey"><img src="./GitHub-Mark-120px-plus.png"></a></li>
         <li><a href="https://ca.linkedin.com/in/russellclarey"><img src="./In-2C-128px-R.png"></a></li>
         <li><a href="mailto:r.e.clarey@gmail.com"><img src="./mail.png"></a></li>
       </ul>
