updated about me

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         I'm a second year software engineering student at the University of Waterloo. In my sparetime I like to code, do puzzles, and watch good shows.
       </p>
       <p>
-        I'm currently looking for co-op opportunities for the winter of 2017 (January - April).
+        I'm currently looking for co-op opportunities for the autumn of 2017 (September - December).
       </p>
       <p>
         You can reach me by <a href="mailto:r.e.clarey@gmail.com">email</a>.
