--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><head>
     <meta charset="UTF-8">
     <title>Russell Clarey</title>
-    <link rel="icon" type="image/png" href="./files/favicon.png">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <meta name="description" content="Hello. I'm Russell. I'm a second year software engineering student at the University of Waterloo. In my sparetime I like to code, do puzzles, and watch good shows.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css">
@@ -11,15 +11,9 @@
         "@type": "Person",
         "email": "mailto:r.e.clarey@gmail.com",
         "image": "https://avatars1.githubusercontent.com/u/15111129?v=3&s=400",
-        "jobTitle": "Junior Web Developer",
-        "worksFor": {
-        	"@type": "Organization",
-          "legalName": "Canada Company",
-          "url": "https://canadacompany.ca/en/index.html"
-        },
+        "jobTitle": "Web Developer",
         "name": "Russell Clarey",
         "additionalName": "Edward",
-        "telephone": "(647) 607-6865",
         "url": "http://russellclarey.com/"
       }
     </script>
@@ -48,10 +42,10 @@
   <label for="about">About</label>
   <input id="projects" class="tab" type="radio" name="menu">
   <label for="projects">Projects</label>
-  <input id="resume" class="tab" type="radio" name="menu">
-  <label for="resume">Resume</label>
   <input id="links" class="tab" type="radio" name="menu">
   <label for="links">Links</label>
+  <input id="resume" class="tab" type="radio" name="menu">
+  <label for="resume">Resume</label>
 
   <div class="tab__content">
       <h3>About me...</h3>
@@ -62,7 +56,7 @@
         I'm currently looking for co-op opportunities for the autumn of 2017 (September - December).
       </p>
       <p>
-        You can reach me by <a href="mailto:r.e.clarey@gmail.com">email</a>.
+        You can <a href="./Russell-Clarey-Resume.pdf">view my resume</a>, or reach me by <a href="mailto:r.e.clarey@gmail.com">email</a>.
       </p>
   </div>
 
@@ -70,40 +64,34 @@
       <h3>Projects</h3>
       <div class="project">
         <h4>CloudCode</h4>
-        <p>Collaborative coding in real time, built with Socket.io and Node.</p>
-        <p class="small-text">Socket.io&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Node.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ace code editor&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Google Diff Match and Patch</p>
-        <p><a href="http://cloud-code.xyz" target="_blank">Live</a>&nbsp;&nbsp;<a href="https://github.com/rclarey/cloudcode" target="_blank">Source</a></p>
+        <p>Collaborative coding in real time, built with React, Socket.io, and Node.</p>
+        <p class="small-text">React&ensp;&ensp;Socket.io&ensp;&ensp;Node.js&ensp;&ensp;MongoDB</p>
+        <p><a href="https://github.com/rclarey/cloudcode" target="_blank">Source</a></p>
       </div>
       <hr>
       <div class="project">
-        <h4>Playur (WIP)</h4>
-        <p>A music streaming web app built with React and Node. It is currently in development</p>
-        <p class="small-text">React&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Node.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MongoDB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Material-UI</p>
+        <h4>Playur</h4>
+        <p>A music streaming web app built with React and Node.</p>
+        <p class="small-text">React&ensp;&ensp;Node.js&ensp;&ensp;MongoDB</p>
         <p><a href="https://github.com/rclarey/playur" target="_blank">Source</a></p>
       </div>
       <hr>
       <div class="project">
         <h4>MyoMusic</h4>
         <p>Ever wanted to play Guitar Hero/DDR with a Myo? Now you can with MyoMusic! Created at EngHack Fall 2015.</p>
-        <p class="small-text">Angular.js&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Myo SDK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Greensock</p>
-        <p><a href="http://www.charliezhang.xyz/myomusic/" target="_blank">Live</a>&nbsp;&nbsp;<a href="https://github.com/luoyang9/MyoDDR" target="_blank">Source</a></p>
+        <p class="small-text">Angular.js&ensp;&ensp;Myo SDK&ensp;&ensp;Greensock</p>
+        <p><a href="https://github.com/luoyang9/MyoDDR" target="_blank">Source</a></p>
       </div>
-  </div>
-
-  <div class="tab__content">
-    <h3>Resume</h3>
-    <a target="_blank" href="./Russell-Clarey-Resume.pdf"><img id="resume" src="./resume-2a.png"><p>Resume PDF</p></a>
   </div>
 
   <div class="tab__content">
       <h3>Links</h3>
       <ul>
-        <li><a href="https://github.com/rclarey"><img src="./GitHub-Mark-120px-plus.png"></a></li>
-        <li><a href="https://ca.linkedin.com/in/russellclarey"><img src="./In-2C-128px-R.png"></a></li>
-        <li><a href="mailto:r.e.clarey@gmail.com"><img src="./mail.png"></a></li>
+        <li><a href="https://github.com/rclarey">github.com/rclarey</a></li>
+        <li><a href="https://ca.linkedin.com/in/rclarey">linkedin.com/in/rclarey</a></li>
+        <li><a href="mailto:r.e.clarey@gmail.com">r.e.clarey@gmail.com</a></li>
       </ul>
   </div>
 </div>
-  
-
+<script src="./scripts.js"></script>
 </body></html>
