--- a/index.html
+++ b/index.html
@@ -1,97 +1,83 @@
 <html><head>
-    <meta charset="UTF-8">
-    <title>Russell Clarey</title>
-    <link rel="icon" type="image/png" href="./favicon.png">
-    <meta name="description" content="Hello. I'm Russell. I'm a second year software engineering student at the University of Waterloo. In my sparetime I like to code, do puzzles, and watch good shows.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css">
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "Person",
-        "email": "mailto:r.e.clarey@gmail.com",
-        "image": "https://avatars1.githubusercontent.com/u/15111129?v=3&s=400",
-        "jobTitle": "Web Developer",
-        "name": "Russell Clarey",
-        "additionalName": "Edward",
-        "url": "http://russellclarey.com/"
-      }
-    </script>
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <meta charset="UTF-8">
+  <title>Russell Clarey</title>
+  <link rel="icon" type="image/png" href="./favicon.png">
+  <meta name="description" content="Hello. I'm Russell. I'm a third year software engineering student at the University of Waterloo. In my sparetime I like to code, go hiking, and watch good shows.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./style.css">
+  <script type="application/ld+json">
+    {
+    "@context": "http://schema.org",
+    "@type": "Person",
+    "email": "mailto:r.e.clarey@gmail.com",
+    "image": "https://avatars1.githubusercontent.com/u/15111129?v=3&s=400",
+    "jobTitle": "Web Developer",
+    "name": "Russell Clarey",
+    "additionalName": "Edward",
+    "url": "http://russellclarey.com/"
+    }
+  </script>
+  <script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+                                                                           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                                                                             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                                                                                                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                                                           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-71054815-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </head>
+                                                                           ga('create', 'UA-71054815-1', 'auto');
+                                                                           ga('send', 'pageview');
+  </script>
+</head>
 
-  <body>
+<body>
 
-    <div class="container">
-  <div class="star-container">
-    <h1>Russell Clarey</h1>
-    <div id="stars"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
-  </div>
-  
-  <input id="about" class="tab" type="radio" name="menu" checked="">
-  <label for="about">About</label>
-  <input id="projects" class="tab" type="radio" name="menu">
-  <label for="projects">Projects</label>
-  <input id="links" class="tab" type="radio" name="menu">
-  <label for="links">Links</label>
-  <input id="resume" class="tab" type="radio" name="menu">
-  <label for="resume">Resume</label>
+  <div class="container">
+    <div class="star-container">
+      <h1>Russell Clarey</h1>
+      <div id="stars"></div>
+      <div id="stars2"></div>
+      <div id="stars3"></div>
+    </div>
+    
+    <input id="about" class="tab" type="radio" name="menu" checked="">
+    <label for="about">About</label>
+    <input id="projects" class="tab" type="radio" name="menu">
+    <label for="projects">Projects</label>
+    <input id="links" class="tab" type="radio" name="menu">
+    <label for="links">Links</label>
+    <input id="resume" class="tab" type="radio" name="menu">
+    <label for="resume">Resume</label>
 
-  <div class="tab__content">
+    <div class="tab__content">
       <h3>About me...</h3>
       <p>
-        I'm a second year software engineering student at the University of Waterloo. In my sparetime I like to code, do puzzles, and watch good shows.
+        I'm a third year software engineering student at the University of Waterloo. In my sparetime I like to code, go hiking, and watch good shows.
       </p>
       <p>
-        I'm currently looking for co-op opportunities for the autumn of 2017 (September - December).
+        I'm currently looking for co-op opportunities for the winter of 2019 (January - April).
       </p>
       <p>
         You can <a href="./Russell-Clarey-Resume.pdf">view my resume</a>, or reach me by <a href="mailto:r.e.clarey@gmail.com">email</a>.
       </p>
-  </div>
+    </div>
 
-  <div class="tab__content">
+    <div class="tab__content">
       <h3>Projects</h3>
       <div class="project">
         <h4>CloudCode</h4>
-        <p>Collaborative coding in real time, built with React, Socket.io, and Node.</p>
-        <p class="small-text">React&ensp;&ensp;Socket.io&ensp;&ensp;Node.js&ensp;&ensp;MongoDB</p>
-        <p><a href="https://github.com/rclarey/cloudcode" target="_blank">Source</a></p>
+        <p>Collaborative coding in real time, using my own hand-written <a href="https://github.com/rclarey/simple-ot">operational transform library</a>.
+          <p class="small-text">React&ensp;&ensp;Socket.io&ensp;&ensp;Node.js&ensp;&ensp;MongoDB</p>
+          <p><a href="https://github.com/rclarey/cloudcode" target="_blank">Source code</a></p>
       </div>
-      <hr>
-      <div class="project">
-        <h4>Playur</h4>
-        <p>A music streaming web app built with React and Node.</p>
-        <p class="small-text">React&ensp;&ensp;Node.js&ensp;&ensp;MongoDB</p>
-        <p><a href="https://github.com/rclarey/playur" target="_blank">Source</a></p>
-      </div>
-      <hr>
-      <div class="project">
-        <h4>MyoMusic</h4>
-        <p>Ever wanted to play Guitar Hero/DDR with a Myo? Now you can with MyoMusic! Created at EngHack Fall 2015.</p>
-        <p class="small-text">Angular.js&ensp;&ensp;Myo SDK&ensp;&ensp;Greensock</p>
-        <p><a href="https://github.com/luoyang9/MyoDDR" target="_blank">Source</a></p>
-      </div>
-  </div>
+    </div>
 
-  <div class="tab__content">
+    <div class="tab__content">
       <h3>Links</h3>
       <ul>
         <li><a href="https://github.com/rclarey">github.com/rclarey</a></li>
         <li><a href="https://ca.linkedin.com/in/rclarey">linkedin.com/in/rclarey</a></li>
         <li><a href="mailto:r.e.clarey@gmail.com">r.e.clarey@gmail.com</a></li>
       </ul>
+    </div>
   </div>
-</div>
-<script src="./scripts.js"></script>
+  <script src="./scripts.js"></script>
 </body></html>
