--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="stars2"></div>
       <div id="stars3"></div>
     </div>
-    
+
     <input id="about" class="tab" type="radio" name="menu" checked="">
     <label for="about">About</label>
     <input id="projects" class="tab" type="radio" name="menu">
@@ -50,10 +50,10 @@
     <div class="tab__content">
       <h3>About me...</h3>
       <p>
-        I'm a third year software engineering student at the University of Waterloo. In my sparetime I like to code, go hiking, and watch good shows.
+        I'm a fourth year software engineering student at the University of Waterloo. In my sparetime I like to code, go hiking, and watch good shows.
       </p>
       <p>
-        I'm currently looking for co-op opportunities for the winter of 2019 (January - April).
+        I'm currently looking for intern opportunities for the fall of 2019 (September - December).
       </p>
       <p>
         You can <a href="./Russell-Clarey-Resume.pdf">view my resume</a>, or reach me by <a href="mailto:r.e.clarey@gmail.com">email</a>.
@@ -62,6 +62,12 @@
 
     <div class="tab__content">
       <h3>Projects</h3>
+      <div class="project">
+        <h4>simple-ot</h4>
+        <p>A simple, hand-written operational transform library that uses the domain-agnostic GOTO control algorithm.</p>
+          <p class="small-text">TypeScript</p>
+          <p><a href="https://github.com/rclarey/simple-ot" target="_blank">Source code</a></p>
+      </div>
       <div class="project">
         <h4>CloudCode</h4>
         <p>Collaborative coding in real time, using my own hand-written <a href="https://github.com/rclarey/simple-ot">operational transform library</a>.
